--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,3 +12,10 @@ spring:
     hibernate:
       ddl-auto: update
     show: true
+
+server:
+  port: ${SERVER_PORT:8089}
+
+secret:
+  header:
+    key: ${SECRET_HEADER_KEY}
